Worked on settings pages and known folders Now we have two settings pages with all content necessarily to set value for a different characteristics of app Created models to save and load data from settings for a different pages (so it is more convenient to structure and use) Found new way to access users known folders

--- a/FileExplorer/Views/Settings/Pages/SettingsExplorerPage.xaml
+++ b/FileExplorer/Views/Settings/Pages/SettingsExplorerPage.xaml
@@ -21,7 +21,7 @@
                     </controls:SettingsCard.HeaderIcon>
 
                     <controls:SettingsCard.Content>
-                        <ToggleSwitch />
+                        <ToggleSwitch IsOn="{x:Bind ViewModel.PageSettings.ShowHiddenFiles}" />
                     </controls:SettingsCard.Content>
 
                 </controls:SettingsCard>
@@ -34,20 +34,20 @@
                     </controls:SettingsCard.HeaderIcon>
 
                     <controls:SettingsCard.Content>
-                        <ToggleSwitch />
+                        <ToggleSwitch IsOn="{x:Bind ViewModel.PageSettings.HideSystemFiles}" />
                     </controls:SettingsCard.Content>
 
                 </controls:SettingsCard>
 
                 <controls:SettingsCard
                     Header="Show extensions"
-                    Description="Shows extensions for all files">
+                    Description="Shows extensions for known file types">
                     <controls:SettingsCard.HeaderIcon>
                         <FontIcon FontSize="14" Glyph="&#xE9F9;" />
                     </controls:SettingsCard.HeaderIcon>
 
                     <controls:SettingsCard.Content>
-                        <ToggleSwitch />
+                        <ToggleSwitch IsOn="{x:Bind ViewModel.PageSettings.ShowFileExtensions}" />
                     </controls:SettingsCard.Content>
 
                 </controls:SettingsCard>
