--- a/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
+++ b/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
@@ -10,6 +10,7 @@
     xmlns:behaviors="using:FileExplorer.UI.Behaviors"
     xmlns:toolkitBehaviors="using:CommunityToolkit.WinUI.UI.Behaviors"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:generalBehaviors="using:FileExplorer.UI.Behaviors.General"
     mc:Ignorable="d">
 
     <UserControl.Resources>
@@ -116,7 +117,7 @@
 
                         <behaviors:FocusOnConditionBehavior Condition="{x:Bind ViewModel.IsWritingRoute, Mode=OneWay}"/>
 
-                        <behaviors:LostFocusBehavior Command="{x:Bind ViewModel.SwitchNavigationBarModeCommand}" />
+                        <generalBehaviors:LostFocusBehavior Command="{x:Bind ViewModel.SwitchNavigationBarModeCommand}" />
 
                         <toolkitBehaviors:KeyDownTriggerBehavior Key="Enter">
                             <core:InvokeCommandAction Command="{x:Bind ViewModel.NavigateUsingRouteInputCommand}" />
@@ -128,7 +129,7 @@
             </TextBox>
 
             <interactivity:Interaction.Behaviors>
-                <behaviors:ClickBehavior Command="{x:Bind ViewModel.SwitchNavigationBarModeCommand}" />
+                <generalBehaviors:ClickBehavior Command="{x:Bind ViewModel.SwitchNavigationBarModeCommand}" />
             </interactivity:Interaction.Behaviors>
 
         </Grid>
