--- a/FileExplorer/Views/ShellPage.xaml
+++ b/FileExplorer/Views/ShellPage.xaml
@@ -15,6 +15,7 @@
     xmlns:helpers="using:FileExplorer.UI.Helpers"
     xmlns:navigation="using:Models.Navigation"
     xmlns:tabs="using:FileExplorer.UI.Behaviors.Tabs"
+    xmlns:navigation1="using:FileExplorer.UI.Behaviors.Navigation"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -24,8 +25,7 @@
         <DataTemplate x:Key="ExpandedTemplate" x:DataType="navigation:NavigationItemModel">
             <NavigationViewItem SelectsOnInvoked="{x:Bind NoChildren}"
                                 MenuItemsSource="{x:Bind SubItems}"
-                                helpers:NavigationHelper.NavigateTo="{x:Bind NavigationPage}"
-                                helpers:PathIdentifyHelper.Path="{x:Bind Path}">
+                                helpers:NavigationHelper.NavigationKey="{x:Bind Path}">
 
                 <NavigationViewItem.Content>
                     <Grid>
@@ -114,7 +114,7 @@
                     <ColumnDefinition Width="3.8*" MinWidth="200" />
                 </Grid.ColumnDefinitions>
 
-                <NavigationView x:Name="NavigationView"
+                <NavigationView
                                 AlwaysShowHeader="True"
                                 PaneDisplayMode="Left"
                                 SelectedItem="{x:Bind ViewModel.Selected, Mode=TwoWay}"
@@ -122,7 +122,12 @@
                                 IsSettingsVisible="False"
                                 IsPaneToggleButtonVisible="False"
                                 MenuItemsSource="{x:Bind ViewModel.NavigationPaneViewModel.NavigationItems}"
-                                MenuItemTemplate="{StaticResource ExpandedTemplate}" />
+                                MenuItemTemplate="{StaticResource ExpandedTemplate}">
+
+                    <interactivity:Interaction.Behaviors>
+                        <navigation1:NavigationBehavior />
+                    </interactivity:Interaction.Behaviors>
+                </NavigationView>
 
                 <ui:InteractiveGridSplitter
                     Grid.Column="1" 
