Fixed navigation pane Now left navigation pane reacts to a selected menu item in tab user is currently working. If tab has no selected item default (first) element is getting selected

--- a/FileExplorer/Views/ShellPage.xaml
+++ b/FileExplorer/Views/ShellPage.xaml
@@ -117,7 +117,7 @@
                 <NavigationView
                                 AlwaysShowHeader="True"
                                 PaneDisplayMode="Left"
-                                SelectedItem="{x:Bind ViewModel.Selected, Mode=TwoWay}"
+                                SelectedItem="{x:Bind ViewModel.TabService.SelectedTab.Selected, Mode=TwoWay}"
                                 IsBackButtonVisible="Collapsed"
                                 IsSettingsVisible="False"
                                 IsPaneToggleButtonVisible="False"
