--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -14,6 +14,7 @@
     xmlns:ui="using:FileExplorer.UI"
     xmlns:storageWrappers1="using:Models.StorageWrappers"
     xmlns:generalBehaviors="using:FileExplorer.UI.Behaviors.General"
+    xmlns:contextMenu="using:FileExplorer.UI.Behaviors.ContextMenu"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -198,13 +199,24 @@
                                        StretchContentForSingleRow="False"
                                        DesiredWidth="180"
                                        ItemHeight="160"
-                                       RightTapped="OnDirectoryItemsGridRightTapped"
                                        ItemsSource="{x:Bind ViewModel.DirectoryItems, Mode=OneWay}" 
                                        ItemTemplate="{StaticResource GridItemTemplate}"
                                        SelectionMode="Extended">
-                <MenuFlyout x:Name="ContextMenu" />
+
+                <controls:AdaptiveGridView.ContextFlyout>
+                    <ui:BuildingMenuFlyout>
+                        <interactivity:Interaction.Behaviors>
+                            <contextMenu:MenuFlyoutBuildingBehavior Builder="{x:Bind ViewModel}" />
+                        </interactivity:Interaction.Behaviors>
+                    </ui:BuildingMenuFlyout>
+                </controls:AdaptiveGridView.ContextFlyout>
+
                 <interactivity:Interaction.Behaviors>
+
                     <behaviors:MultiSelectionBehavior SelectedItems="{x:Bind ViewModel.SelectedItems, Mode=OneWay}" />
+
+                    <contextMenu:GridViewContextDialogBehavior />
+
                 </interactivity:Interaction.Behaviors>
             </controls:AdaptiveGridView>
 
