--- a/FileExplorer/Views/ShellPage.xaml
+++ b/FileExplorer/Views/ShellPage.xaml
@@ -125,7 +125,7 @@
 
             <Grid Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" MinWidth="190" />
+                    <ColumnDefinition Width="*" MinWidth="190" MaxWidth="807" />
                     <ColumnDefinition Width="2" />
                     <ColumnDefinition Width="3.8*" MinWidth="200" />
                 </Grid.ColumnDefinitions>
